--- a/cfg/erl2.conf.sample
+++ b/cfg/erl2.conf.sample
@@ -27,6 +27,11 @@
 
 [network]
 
+# controllers by default are expected to be found at the .1 address of the ERL2
+# subnet (which is the default behavior if this setting is None); you can override 
+# this behavior by specifying a full IP address here (e.g. '192.168.2.25')
+# controllerIP = None
+
 # tanks: networking is disabled by default (controllers ignore this setting)
 # tankNetwork = False
 
